--- a/New Project/MyApplication2/app/src/main/res/layout/activity_maps.xml
+++ b/New Project/MyApplication2/app/src/main/res/layout/activity_maps.xml
@@ -4,8 +4,9 @@
     android:clickable="true"
     tools:layout="@layout/activity_maps">
     <fragment android:layout_width="match_parent"
-        android:layout_height="match_parent" android:id="@+id/map" tools:context=".HUD"
+        android:layout_height="match_parent" android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        tools:context="com.example.robertpreston.myapplication.MapsActivity"
         tools:layout="@layout/activity_maps">
         <Button
             style="?android:attr/buttonStyleSmall"
