--- a/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
+++ b/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:id="@+id/MapsActivity"
+    android:clickable="true"
+    tools:layout="@layout/map_activity"
+    tools:context="com.example.robertpreston.myapplication.MapsActivity">
+    <fragment android:layout_width="match_parent"
+        android:layout_height="match_parent" android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        tools:layout="@layout/activity_maps">
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text ="@string/MapAdd"
+            android:id="@+id/create"
+            android:onClick = "SetPins"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+    </fragment>
+    <EditText
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id= "@+id/marker_title"
+        android:visibility="invisible"
+        android:text = "Default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="This is the page where the main Map Activity will be"
-        android:id="@+id/textView3" />
-</LinearLayout>
+        android:layout_alignBottom="@+id/map"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
