added map title
Description

--- a/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
+++ b/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
@@ -49,5 +49,14 @@
         android:layout_alignBottom="@+id/map"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+    <EditText
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id= "@+id/map_title"
+        android:text = "Map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
