--- a/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
+++ b/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
@@ -49,6 +49,15 @@
         android:layout_alignBottom="@+id/map"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text ="Delete"
+        android:id="@+id/deletemarker"
+        android:onClick = "DeleteMarker"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
     <EditText
         android:focusable="true"
         android:focusableInTouchMode="true"
