--- a/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
+++ b/New Project/MyApplication2/app/src/main/res/layout/map_activity.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:id="@+id/MapsActivity"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/MapsActivity"
     android:clickable="true"
     tools:layout="@layout/map_activity"
     tools:context="com.example.robertpreston.myapplication.MapsActivity">
     <fragment android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:layout="@layout/activity_maps">
+        tools:layout="@layout/activity_maps"
+        map:cameraTargetLat="37.955952406751855"
+        map:cameraTargetLng="-91.774314455688"
+        map:cameraZoom="17">
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
